# scanner-to-paperless

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  decorators.py  docker-compose.yml  helpers.py  paperless_helpers.py  pyproject.toml  scanner_helpers.py
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: hp_2700_deskjet.xml
tests/: test_paperless_helpers.py  test_scanner_helpers.py  utils.py
